# LZ78

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compressor.cpp  main.py  test.txt  test_output.txt
